# lsdo_function_spaces

./: .gitignore  README.md  pre-requirements.txt  pyproject.toml  release_notes.md  requirements.txt  setup.py
.github/workflows/: actions.yml
docs/: README.md  conf.py
docs/src/: getting_started.md  welcome.md
examples/basic_examples/: simple_b_spline_set.py
lsdo_function_spaces/: __init__.py
lsdo_function_spaces/core/: b_spline_set_space.py  b_spline_space.py  function.py  function_set.py  function_set_space.py  function_space.py  optimization.py
lsdo_function_spaces/core/depircated/: b_spline_set_space.py  function_set_space.py
lsdo_function_spaces/core/operations/: basic_ops.py  operations.py
lsdo_function_spaces/core/spaces/: b_spline_space.py  conditional_space.py  constant_space.py  idw_space.py  operation_space.py  polynomial_space.py  rbf_space.py  test_spaces.py  tri_space.py
lsdo_function_spaces/utils/: file_io.py  internal_utilities.py  plotting_functions.py  utility_functions.py
stored_files/imports/: rectangular_wing_stored_import.pickle
stored_files/projections/: 09APRi.pickle  YJfjEj.pickle  i9eIf2.pickle  name_space_dict.pickle
tests/: templates.py
