[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdo_function_spaces"
description = "A package for various functions and function spaces"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["CADDEE", "auto-differentation", "functions", "optimization", "B-splines"]
authors = [{name = "Andrew Fletcher", email = "afletcher168@gmail.com"}]
dependencies = [
    'numpy',
    'vedo',
    'joblib',
    'pandas',
    'scipy',
    'csdl_alpha @ git+https://github.com/LSDOlab/CSDL_alpha.git',
    'lsdo_b_splines_cython @ git+https://github.com/LSDOlab/lsdo_b_splines_cython.git'
]
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest']
docs = [
    'myst-nb',
    'sphinx==5.3.0',
    'sphinx_rtd_theme',
    'sphinx-copybutton',
    'sphinx-autoapi==2.1.0',
    'astroid==2.15.5',
    'numpydoc',
    'gitpython',
    'sphinxcontrib-collections @ git+https://github.com/anugrahjo/sphinx-collections.git',
    'sphinxcontrib-bibtex',
]

[tool.setuptools.dynamic]
version = {attr = "lsdo_function_spaces.__version__"}

[tool.setuptools.packages.find]
exclude = ["tutorials"]